--- a/around-web/src/index.css
+++ b/around-web/src/index.css
@@ -1,7 +1,9 @@
 @import '~antd/dist/antd.css';
+@import 'styles/App.css';
 @import 'styles/Main.css';
 @import 'styles/Register.css';
-
+@import 'styles/Login.css';
+@import 'styles/TopBar.css';
 
 body {
   margin: 0;
@@ -17,4 +19,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
   monospace;
 }
-
