--- a/around-web/src/index.css
+++ b/around-web/src/index.css
@@ -4,6 +4,8 @@
 @import 'styles/Register.css';
 @import 'styles/Login.css';
 @import 'styles/TopBar.css';
+@import 'styles/Home.css';
+@import 'styles/AroundMarker.css';
 
 body {
   margin: 0;
